build/transformers/v4.13.0/en/model_doc/trocr.mdx
---
local: trocr
sections:
- local: overview
  title: Overview
- local: inference
  title: Inference
- local: transformers.TrOCRConfig
  title: TrOCRConfig
- local: transformers.TrOCRProcessor
  title: TrOCRProcessor
- local: transformers.TrOCRForCausalLM
  title: TrOCRForCausalLM
title: TrOCR
---
<script>
import Tip from "./Tip.svelte";
import Youtube from "./Youtube.svelte";
import Docstring from "./Docstring.svelte";
import CodeBlock from "./CodeBlock.svelte";
import CodeBlockFw from "./CodeBlockFw.svelte";
import ColabDropdown from "./ColabDropdown.svelte";
import IconCopyLink from "./IconCopyLink.svelte";

export let fw: "pt" | "tf"
</script>

<!--Copyright 2021 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

<h1 id="trocr">TrOCR</h1>

<h2 id="overview">Overview</h2>

The TrOCR model was proposed in [TrOCR: Transformer-based Optical Character Recognition with Pre-trained Models](https://arxiv.org/abs/2109.10282) by Minghao Li, Tengchao Lv, Lei Cui, Yijuan Lu, Dinei Florencio, Cha Zhang,
Zhoujun Li, Furu Wei. TrOCR consists of an image Transformer encoder and an autoregressive text Transformer decoder to
perform [optical character recognition (OCR)](https://en.wikipedia.org/wiki/Optical_character_recognition).

Please refer to the [VisionEncoderDecoder](/docs/transformers/master/en/visionencoderdecoder) class on how to use this model.

This model was contributed by [Niels Rogge](https://huggingface.co/nielsr).

The original code can be found [here](https://github.com/microsoft/unilm/tree/6f60612e7cc86a2a1ae85c47231507a587ab4e01/trocr).


Tips:

- TrOCR is pre-trained in 2 stages before being fine-tuned on downstream datasets. It achieves state-of-the-art results
  on both printed (e.g. the [SROIE dataset](https://paperswithcode.com/dataset/sroie)) and handwritten (e.g. the
  [IAM Handwriting dataset](https://fki.tic.heia-fr.ch/databases/iam-handwriting-database)) text recognition tasks.
  For more information, see the [official models](https://huggingface.co/models?other=trocr).
- TrOCR is always used within the [VisionEncoderDecoder](/docs/transformers/master/en/visionencoderdecoder) framework.

<h2 id="inference">Inference</h2>

TrOCR's [VisionEncoderDecoderModel](/docs/transformers/master/en/model_doc/visionencoderdecoder#transformers.VisionEncoderDecoderModel) model accepts images as input and makes use of
[generate()](/docs/transformers/master/en/main_classes/model#transformers.generation_utils.GenerationMixin.generate) to autoregressively generate text given the input
image.

The [ViTFeatureExtractor](/docs/transformers/master/en/model_doc/vit#transformers.ViTFeatureExtractor) class is responsible for preprocessing the input image and
[RobertaTokenizer](/docs/transformers/master/en/model_doc/roberta#transformers.RobertaTokenizer) decodes the generated target tokens to the target string. The
[TrOCRProcessor](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor) wraps [ViTFeatureExtractor](/docs/transformers/master/en/model_doc/vit#transformers.ViTFeatureExtractor) and
[RobertaTokenizer](/docs/transformers/master/en/model_doc/roberta#transformers.RobertaTokenizer) into a single instance to both extract the input features and decode the
predicted token ids.

- Step-by-step Optical Character Recognition (OCR)

```
>>> from transformers import TrOCRProcessor, VisionEncoderDecoderModel
>>> import requests
>>> from PIL import Image

>>> processor = TrOCRProcessor.from_pretrained("microsoft/trocr-base-handwritten")
>>> model = VisionEncoderDecoderModel.from_pretrained("microsoft/trocr-base-handwritten")

>>> # load image from the IAM dataset
>>> url = "https://fki.tic.heia-fr.ch/static/img/a01-122-02.jpg"
>>> image = Image.open(requests.get(url, stream=True).raw).convert("RGB")

>>> pixel_values = processor(image, return_tensors="pt").pixel_values
>>> generated_ids = model.generate(pixel_values)

>>> generated_text = processor.batch_decode(generated_ids, skip_special_tokens=True)[0]
```

See the [model hub](https://huggingface.co/models?filter=trocr) to look for TrOCR checkpoints.


<h2 id="transformers.TrOCRConfig">TrOCRConfig</h2>

<div class="docstring">

<docstring><name>class transformers.TrOCRConfig</name><anchor>transformers.TrOCRConfig</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/configuration_trocr.py#L29</source><parameters>[{"name": "vocab_size", "val": " = 50265"}, {"name": "d_model", "val": " = 1024"}, {"name": "decoder_layers", "val": " = 12"}, {"name": "decoder_attention_heads", "val": " = 16"}, {"name": "decoder_ffn_dim", "val": " = 4096"}, {"name": "activation_function", "val": " = 'gelu'"}, {"name": "max_position_embeddings", "val": " = 512"}, {"name": "dropout", "val": " = 0.1"}, {"name": "attention_dropout", "val": " = 0.0"}, {"name": "activation_dropout", "val": " = 0.0"}, {"name": "decoder_start_token_id", "val": " = 2"}, {"name": "classifier_dropout", "val": " = 0.0"}, {"name": "init_std", "val": " = 0.02"}, {"name": "decoder_layerdrop", "val": " = 0.0"}, {"name": "use_cache", "val": " = False"}, {"name": "scale_embedding", "val": " = False"}, {"name": "use_learned_position_embeddings", "val": " = True"}, {"name": "layernorm_embedding", "val": " = True"}, {"name": "pad_token_id", "val": " = 1"}, {"name": "bos_token_id", "val": " = 0"}, {"name": "eos_token_id", "val": " = 2"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **vocab_size** (`int`, _optional_, defaults to 50265) --
  Vocabulary size of the TrOCR model. Defines the number of different tokens that can be represented by the
  `inputs_ids` passed when calling [TrOCRForCausalLM](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRForCausalLM).
- **d_model** (`int`, _optional_, defaults to 1024) --
  Dimensionality of the layers and the pooler layer.
- **decoder_layers** (`int`, _optional_, defaults to 12) --
  Number of decoder layers.
- **decoder_attention_heads** (`int`, _optional_, defaults to 16) --
  Number of attention heads for each attention layer in the Transformer decoder.
- **decoder_ffn_dim** (`int`, _optional_, defaults to 4096) --
  Dimensionality of the "intermediate" (often named feed-forward) layer in decoder.
- **activation_function** (`str` or `function`, _optional_, defaults to `"gelu"`) --
  The non-linear activation function (function or string) in the pooler. If string, `"gelu"`,
  `"relu"`, `"silu"` and `"gelu_new"` are supported.
- **max_position_embeddings** (`int`, _optional_, defaults to 512) --
  The maximum sequence length that this model might ever be used with. Typically set this to something large
  just in case (e.g., 512 or 1024 or 2048).
- **dropout** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for all fully connected layers in the embeddings, and pooler.
- **attention_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout ratio for the attention probabilities.
- **activation_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout ratio for activations inside the fully connected layer.
- **classifier_dropout** (`float`, _optional_, defaults to 0.0) --
  The dropout ratio for classifier.
- **init_std** (`float`, _optional_, defaults to 0.02) --
  The standard deviation of the truncated_normal_initializer for initializing all weight matrices.
  decoder_layerdrop -- (`float`, _optional_, defaults to 0.0):
  The LayerDrop probability for the decoder. See the [LayerDrop paper](see
  https://arxiv.org/abs/1909.11556) for more details.
- **use_cache** (`bool`, _optional_, defaults to `True`) --
  Whether or not the model should return the last key/values attentions (not used by all models).
- **scale_embedding** (`bool`, _optional_, defaults to `False`) --
  Whether or not to scale the word embeddings by sqrt(d_model).
- **use_learned_position_embeddings** (`bool`, _optional_, defaults to `True`) --
  Whether or not to use learned position embeddings. If not, sinusoidal position embeddings will be used.
- **layernorm_embedding** (`bool`, _optional_, defaults to `True`) --
  Whether or not to use a layernorm after the word + position embeddings.</paramsdesc><paramgroups>0</paramgroups></docstring>

This is the configuration class to store the configuration of a [TrOCRForCausalLM](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRForCausalLM). It is used
to instantiate an TrOCR model according to the specified arguments, defining the model architecture. Instantiating
a configuration with the defaults will yield a similar configuration to that of the TrOCR [microsoft/trocr-base](https://huggingface.co/microsoft/trocr-base) architecture.

Configuration objects inherit from [PretrainedConfig](/docs/transformers/master/en/main_classes/configuration#transformers.PretrainedConfig) and can be used to control the model
outputs. Read the documentation from [PretrainedConfig](/docs/transformers/master/en/main_classes/configuration#transformers.PretrainedConfig) for more information.




Example:

```python
>>> from transformers import TrOCRForCausalLM, TrOCRConfig

>>> # Initializing a TrOCR-base style configuration
>>> configuration = TrOCRConfig()

>>> # Initializing a model from the TrOCR-base style configuration
>>> model = TrOCRForCausalLM(configuration)

>>> # Accessing the model configuration
>>> configuration = model.config
```


</div>

<h2 id="transformers.TrOCRProcessor">TrOCRProcessor</h2>

<div class="docstring">

<docstring><name>class transformers.TrOCRProcessor</name><anchor>transformers.TrOCRProcessor</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L27</source><parameters>[{"name": "feature_extractor", "val": ""}, {"name": "tokenizer", "val": ""}]</parameters><paramsdesc>- **feature_extractor** ([AutoFeatureExtractor](/docs/transformers/master/en/model_doc/auto#transformers.AutoFeatureExtractor)) --
  An instance of [AutoFeatureExtractor](/docs/transformers/master/en/model_doc/auto#transformers.AutoFeatureExtractor). The feature extractor is a required input.
- **tokenizer** ([RobertaTokenizer](/docs/transformers/master/en/model_doc/roberta#transformers.RobertaTokenizer)) --
  An instance of [RobertaTokenizer](/docs/transformers/master/en/model_doc/roberta#transformers.RobertaTokenizer). The tokenizer is a required input.</paramsdesc><paramgroups>0</paramgroups></docstring>

Constructs a TrOCR processor which wraps a vision feature extractor and a TrOCR tokenizer into a single processor.

[TrOCRProcessor](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor) offers all the functionalities of [AutoFeatureExtractor](/docs/transformers/master/en/model_doc/auto#transformers.AutoFeatureExtractor)
and [RobertaTokenizer](/docs/transformers/master/en/model_doc/roberta#transformers.RobertaTokenizer). See the [__call__()](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor.__call__) and
[decode()](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor.decode) for more information.





<div class="docstring">
<docstring><name>\_\_call\_\_</name><anchor>transformers.TrOCRProcessor.__call__</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L109</source><parameters>[{"name": "*args", "val": ""}, {"name": "**kwargs", "val": ""}]</parameters></docstring>

When used in normal mode, this method forwards all its arguments to AutoFeatureExtractor's
`__call__()` and returns its output. If used in the context
[as_target_processor()](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor.as_target_processor) this method forwards all its arguments to
TrOCRTokenizer's `__call__`. Please refer to the doctsring of the above two
methods for more information.


</div>
<div class="docstring">
<docstring><name>from\_pretrained</name><anchor>transformers.TrOCRProcessor.from_pretrained</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L76</source><parameters>[{"name": "pretrained_model_name_or_path", "val": ""}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **pretrained_model_name_or_path** (`str` or `os.PathLike`) --
  This can be either:

  - a string, the _model id_ of a pretrained feature_extractor hosted inside a model repo on
    huggingface.co. Valid model ids can be located at the root-level, like `bert-base-uncased`, or
    namespaced under a user or organization name, like `dbmdz/bert-base-german-cased`.
  - a path to a _directory_ containing a feature extractor file saved using the
    `save_pretrained` method, e.g.,
    `./my_model_directory/`.
  - a path or url to a saved feature extractor JSON _file_, e.g.,
    `./my_model_directory/preprocessor_config.json`.
**kwargs --
Additional keyword arguments passed along to both `PreTrainedFeatureExtractor` and
[PreTrainedTokenizer](/docs/transformers/master/en/main_classes/tokenizer#transformers.PreTrainedTokenizer)</paramsdesc><paramgroups>0</paramgroups></docstring>

Instantiate a [TrOCRProcessor](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor) from a pretrained TrOCR processor.

<Tip>

This class method is simply calling AutoFeatureExtractor's
`from_pretrained` and TrOCRTokenizer's
`from_pretrained`. Please refer to the
docstrings of the methods above for more information.

</Tip>




</div>
<div class="docstring">
<docstring><name>save\_pretrained</name><anchor>transformers.TrOCRProcessor.save_pretrained</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L56</source><parameters>[{"name": "save_directory", "val": ""}]</parameters><paramsdesc>- **save_directory** (`str` or `os.PathLike`) --
  Directory where the feature extractor JSON file and the tokenizer files will be saved (directory will
  be created if it does not exist).</paramsdesc><paramgroups>0</paramgroups></docstring>

Save a TrOCR feature extractor object and TrOCR tokenizer object to the directory `save_directory`, so that
it can be re-loaded using the [from_pretrained()](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRProcessor.from_pretrained) class method.

<Tip>

This class method is simply calling `save_pretrained` and
`save_pretrained`. Please refer to the
docstrings of the methods above for more information.

</Tip>




</div>
<div class="docstring">
<docstring><name>batch\_decode</name><anchor>transformers.TrOCRProcessor.batch_decode</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L119</source><parameters>[{"name": "*args", "val": ""}, {"name": "**kwargs", "val": ""}]</parameters></docstring>

This method forwards all its arguments to TrOCRTokenizer's
[batch_decode()](/docs/transformers/master/en/internal/tokenization_utils#transformers.PreTrainedTokenizerBase.batch_decode). Please refer to the docstring of this method for more
information.


</div>
<div class="docstring">
<docstring><name>decode</name><anchor>transformers.TrOCRProcessor.decode</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L127</source><parameters>[{"name": "*args", "val": ""}, {"name": "**kwargs", "val": ""}]</parameters></docstring>

This method forwards all its arguments to TrOCRTokenizer's [decode()](/docs/transformers/master/en/internal/tokenization_utils#transformers.PreTrainedTokenizerBase.decode).
Please refer to the docstring of this method for more information.


</div>
<div class="docstring">
<docstring><name>as\_target\_processor</name><anchor>transformers.TrOCRProcessor.as_target_processor</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/processing_trocr.py#L134</source><parameters>[]</parameters></docstring>

        Temporarily sets the tokenizer for processing the input. Useful for encoding the labels when fine-tuning TrOCR.
        

</div></div>

<h2 id="transformers.TrOCRForCausalLM">TrOCRForCausalLM</h2>

<div class="docstring">

<docstring><name>class transformers.TrOCRForCausalLM</name><anchor>transformers.TrOCRForCausalLM</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/modeling_trocr.py#L778</source><parameters>[{"name": "config", "val": ""}]</parameters><paramsdesc>- **config** ([TrOCRConfig](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRConfig)) --
  Model configuration class with all the parameters of the model. Initializing with a config file does not
  load the weights associated with the model, only the configuration. Check out the
  [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model weights.</paramsdesc><paramgroups>0</paramgroups></docstring>
The TrOCR Decoder with a language modeling head. Can be used as the decoder part of [EncoderDecoderModel](/docs/transformers/master/en/model_doc/encoderdecoder#transformers.EncoderDecoderModel) and `VisionEncoderDecoder`.
This model inherits from [PreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel). Check the superclass documentation for the generic
methods the library implements for all its model (such as downloading or saving, resizing the input embeddings,
pruning heads etc.)

This model is also a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module)
subclass. Use it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to
general usage and behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.TrOCRForCausalLM.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/trocr/modeling_trocr.py#L809</source><parameters>[{"name": "input_ids", "val": " = None"}, {"name": "attention_mask", "val": " = None"}, {"name": "encoder_hidden_states", "val": " = None"}, {"name": "encoder_attention_mask", "val": " = None"}, {"name": "head_mask", "val": " = None"}, {"name": "cross_attn_head_mask", "val": " = None"}, {"name": "past_key_values", "val": " = None"}, {"name": "inputs_embeds", "val": " = None"}, {"name": "labels", "val": " = None"}, {"name": "use_cache", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **input_ids** (`torch.LongTensor` of shape `(batch_size, sequence_length)`) --
  Indices of input sequence tokens in the vocabulary. Padding will be ignored by default should you
  provide it.

  Indices can be obtained using `TrOCRTokenizer`. See
  [transformers.PreTrainedTokenizer.encode()](/docs/transformers/master/en/internal/tokenization_utils#transformers.PreTrainedTokenizerBase.encode) and [transformers.PreTrainedTokenizer.__call__()](/docs/transformers/master/en/internal/tokenization_utils#transformers.PreTrainedTokenizerBase.__call__)
  for details.

  [What are input IDs?](../glossary#input-ids)
- **attention_mask** (`torch.Tensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on padding token indices. Mask values selected in `[0, 1]`:

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.

  [What are attention masks?](../glossary#attention-mask)
- **encoder_hidden_states**  (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`, _optional_) --
  Sequence of hidden-states at the output of the last layer of the encoder. Used in the cross-attention
  if the model is configured as a decoder.
- **encoder_attention_mask** (`torch.FloatTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Mask to avoid performing attention on the padding token indices of the encoder input. This mask is used
  in the cross-attention if the model is configured as a decoder. Mask values selected in `[0, 1]`:
- **head_mask** (`torch.Tensor` of shape `(decoder_layers, decoder_attention_heads)`, _optional_) --
  Mask to nullify selected heads of the attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **cross_attn_head_mask** (`torch.Tensor` of shape `(decoder_layers, decoder_attention_heads)`, _optional_) --
  Mask to nullify selected heads of the cross-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **past_key_values** (`tuple(tuple(torch.FloatTensor))`, _optional_, returned when `use_cache=True` is passed or when `config.use_cache=True`) --
  Tuple of `tuple(torch.FloatTensor)` of length `config.n_layers`, with each tuple having 2
  tensors of shape `(batch_size, num_heads, sequence_length, embed_size_per_head)`) and 2 additional
  tensors of shape `(batch_size, num_heads, encoder_sequence_length, embed_size_per_head)`. The two
  additional tensors are only required when the model is used as a decoder in a Sequence to Sequence
  model.

  Contains pre-computed hidden-states (key and values in the self-attention blocks and in the
  cross-attention blocks) that can be used (see `past_key_values` input) to speed up sequential
  decoding.

  If `past_key_values` are used, the user can optionally input only the last `decoder_input_ids`
  (those that don't have their past key value states given to this model) of shape `(batch_size, 1)`
  instead of all `decoder_input_ids` of shape `(batch_size, sequence_length)`.
- **labels** (`torch.LongTensor` of shape `(batch_size, sequence_length)`, _optional_) --
  Labels for computing the masked language modeling loss. Indices should either be in `[0, ..., config.vocab_size]` or -100 (see `input_ids` docstring). Tokens with indices set to `-100` are
  ignored (masked), the loss is only computed for the tokens with labels in `[0, ..., config.vocab_size]`.
- **use_cache** (`bool`, _optional_) --
  If set to `True`, `past_key_values` key value states are returned and can be used to speed up
  decoding (see `past_key_values`).

  - 1 for tokens that are **not masked**,
  - 0 for tokens that are **masked**.
- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under
  returned tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors
  for more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.</paramsdesc><paramgroups>0</paramgroups><rettype>[CausalLMOutputWithCrossAttentions](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.CausalLMOutputWithCrossAttentions) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [CausalLMOutputWithCrossAttentions](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.CausalLMOutputWithCrossAttentions) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([TrOCRConfig](/docs/transformers/master/en/model_doc/trocr#transformers.TrOCRConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Language modeling loss (for next-token prediction).
- **logits** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.vocab_size)`) -- Prediction scores of the language modeling head (scores for each vocabulary token before SoftMax).
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.
- **cross_attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Cross attentions weights after the attention softmax, used to compute the weighted average in the
  cross-attention heads.
- **past_key_values** (`tuple(tuple(torch.FloatTensor))`, _optional_, returned when `use_cache=True` is passed or when `config.use_cache=True`) -- Tuple of `torch.FloatTensor` tuples of length `config.n_layers`, with each tuple containing the
  cached key, value states of the self-attention and the cross-attention layers if model is used in
  encoder-decoder setting. Only relevant if `config.is_decoder = True`.

  Contains pre-computed hidden-states (key and values in the attention blocks) that can be used (see
  `past_key_values` input) to speed up sequential decoding.</retdesc></docstring>



Example:

```python
>>> from transformers import VisionEncoderDecoderModel, TrOCRForCausalLM, ViTModel, TrOCRConfig, ViTConfig

>>> encoder = ViTModel(ViTConfig())
>>> decoder = TrOCRForCausalLM(TrOCRConfig())

# init vision2text model
>>> model = VisionEncoderDecoderModel(encoder=encoder, decoder=decoder)
```






</div></div>
